--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "projectName",
-  "version": "1.0.0",
+  "name": "es6-gulp-boilerplate",
+  "version": "0.0.0",
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.15",
-    "babelify": "^7.2.0",
-    "bower": "^1.6.5",
-    "browser-sync": "^2.7.13",
-    "browserify": "^10.2.4",
-    "del": "^1.2.0",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.3.1",
+    "babel": "^5.8.35",
+    "babel-core": "^5.8.34",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.3.13",
+    "browser-sync": "^2.11.1",
+    "eslint": "^1.10.2",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-filenames": "^0.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
-    "gulp-changed": "^1.2.1",
+    "gulp-changed": "^1.3.0",
     "gulp-combine-mq": "^0.4.0",
     "gulp-concat": "^2.6.0",
-    "gulp-consolidate": "^0.1.2",
-    "gulp-iconfont": "^5.0.1",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.3.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.0.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-watch": "^4.2.4",
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "gulp-webpack": "^1.5.0",
-    "gulp.spritesmith": "^3.8.2",
-    "imagemin-pngquant": "^4.1.0",
-    "jquery": "^1.11.0",
-    "lodash": "^3.10.1",
-    "path": "^0.12.7",
+    "gulp.spritesmith": "^6.1.0",
+    "imagemin-pngquant": "^4.2.0",
+    "react": "^0.14.7",
     "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-named": "^1.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^1.12.2"
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery": "^2.2.0"
   }
 }
