--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "es6-gulp-boilerplate",
+  "name": "threejs-tester",
   "version": "0.0.0",
   "devDependencies": {
     "babel": "^5.8.35",
-    "babel-core": "^5.8.34",
+    "babel-core": "^5.8.35",
     "babel-loader": "^6.1.0",
-    "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.11.1",
-    "eslint": "^1.10.2",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-filenames": "^0.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
@@ -26,7 +22,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
-    "gulp-webpack": "^1.5.0",
     "gulp.spritesmith": "^6.1.0",
     "imagemin-pngquant": "^4.2.0",
     "react": "^0.14.7",
@@ -38,6 +33,8 @@
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
-    "jquery": "^2.2.0"
+    "jquery": "^2.2.0",
+    "stats.js": "0.0.14-master",
+    "three": "^0.73.2"
   }
 }
